file(GLOB SRC_LIST */*.cpp)
list(REMOVE_ITEM SRC_LIST "/home/ubuntu/FudgeDB/FudgeDBCPP/src/general/main.cpp")
message(STATUS "source list is: " ${SRC_LIST})
add_executable(main general/main.cpp ${SRC_LIST})
add_library(fudgeDBLib STATIC ${SRC_LIST})
target_include_directories(fudgeDBLib PUBLIC ${PROJECT_SOURCE_DIR}/inc/sqlsrc PUBLIC ${PROJECT_SOURCE_DIR}/src)
target_link_libraries(fudgeDBLib ${PROJECT_SOURCE_DIR}/lib/libsqlparser.so)
target_include_directories(main PUBLIC ${PROJECT_SOURCE_DIR}/inc/sqlsrc PUBLIC ${PROJECT_SOURCE_DIR}/src)
target_link_libraries(main ${PROJECT_SOURCE_DIR}/lib/libsqlparser.so readline)
